# platform.core.connectivity.smartcard-plugin-uicc

./: CMakeLists.txt  UICCTerminal.cpp  project.config
debian/: changelog  control  smartcard-plugin-uicc.dirs  smartcard-plugin-uicc.install
include/: UICCTerminal.h
packaging/: smartcard-plugin-uicc.changes  smartcard-plugin-uicc.spec
